# SlLidar

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pudutech/lidartest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JavaCallbacker.cpp  JavaCallbacker.h  LiderHelper.cpp  LiderHelper.h  Log.h  native-lib.cpp
app/src/main/cpp/src/: rplidar_driver.cpp  rplidar_driver_impl.h
app/src/main/cpp/src/arch/linux/: net_serial.cpp  net_socket.cpp  thread.hpp
app/src/main/cpp/src/hal/: event.h
app/src/main/java/com/pudutech/lidartest/: CanBus.kt  LidarHelper.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pudutech/lidartest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  native-lib.cpp
jni/src/: rplidar_driver.cpp
jni/src/arch/linux/: arch_linux.h  net_socket.cpp  thread.hpp
